syntax = "proto3";

package pb.svc.provision;
option go_package = "github.com/aglide100/dak-keyword/pb/svc/provision";

service Provision {
    rpc CreateScraper (CreateScraperReq) returns (CreateScraperRes);
    rpc CreateAnalyzer (CreateAnalyzerReq) returns (CreateAnalyzerRes);
    rpc GetScraperStatus (GetScraperStatusReq) returns (GetScraperStatusRes);
    rpc GetAnalyzerStatus (GetAnalyzerStatusReq) returns (GetAnalyzerStatusRes);
    rpc RemoveScraper (RemoveScraperReq) returns (RemoveScraperRes);
}

message CreateScraperReq {
    string keyword = 1;
    string worker_id = 2;
    string job_id = 3;
}

message CreateScraperRes {
    string status = 1;
}

message CreateAnalyzerReq {
    string scraperId = 1;
    string keyword = 2;
}

message CreateAnalyzerRes {
    string status = 1;
}

message GetScraperStatusReq {
    string id = 1;
}

message GetScraperStatusRes {
    string status = 1;
}

message GetAnalyzerStatusReq {
    string id = 1;
}

message GetAnalyzerStatusRes {
    string status = 1;
}

message RemoveScraperReq {
    string id = 1;
}

message RemoveScraperRes {
    string status = 1;
}